--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -52,7 +52,7 @@
 	&::before {
 		height: 6vw;
 		background: url(./../img/bg-triangle-bottom.svg) top center no-repeat;
-		background-size: auto 103%;
+		background-size: 103% 103%;
 		z-index: 1;
 	}
 
