--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -2,7 +2,7 @@
   header.header.js-menu
     .header__inner
       .header__logo.logo
-        img.logo__img(src='img/logo.svg' alt='MPS Development')
+        img.logo__img(src='img/logo.svg' alt='MPS')
         div.logo__text <div>MPS</div>DEVELOPMENT
       nav.menu
         button(type='button' class='menu__toggle js-btn-menu') show/hide menu
