added expertise comp

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -19,8 +19,9 @@ html(lang="en")
 		include ../app/promo/_promo.pug
 		main
 			include ../app/about/_about.pug
-			include ../app/services/_services.pug
 			include ../app/technology/_technology.pug
+			include ../app/services/_services.pug
+			include ../app/expertise/_expertise.pug
 			include ../app/works/_works.pug
 			include ../app/team/_team.pug
 			include ../app/partners/_partners.pug
