--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import '../app/about/about';
 @import '../app/technology/technology';
 @import '../app/works/works';
+@import '../app/expertise/expertise';
 @import '../app/team/team';
 @import '../app/partners/partners';
 @import '../app/slogan/slogan';
