markup section "Team"

--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -12,11 +12,11 @@
             li.menu__item
               a(class='menu__link js-scrollto', href="#about") About
             li.menu__item
-              a(class='menu__link js-scrollto', href="#123") Team
-            li.menu__item
               a(class='menu__link js-scrollto', href="#services") Services
             li.menu__item
               a(class='menu__link js-scrollto', href="#portfolio") Portfolio
+            li.menu__item
+              a(class='menu__link js-scrollto', href="#team") Team
             li.menu__item
               a(class='menu__link js-scrollto', href="#contact") Contact
   section.promo__text
