edit section team

--- a/src/app/team/_team.pug
+++ b/src/app/team/_team.pug
@@ -1,5 +1,5 @@
 section.team#team
-  .team_inner
+  .team__inner
     .wrapper.content--underlined
       h2.team__title meet our team
       p.team__subtitle Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel necessitatibus, commodi ad quasi quaerat quis officiis maxime facere magni aliquid quas animi nulla minus beatae laudantium adipisci perspiciatis, ut fugit.
@@ -20,22 +20,22 @@ section.team#team
       li
         .team__item-main
           img(src="./img/team/OurTeam.jpg")
-    .team__wrapper-preview
-      ul.team__preview-list.js-team-preview
-        li
-          .team__item-prewiev
-            img(src="./img/team/our-team.png")
-        li
-          .team__item-prewiev
-            img(src="./img/team/OurTeam.jpg")
-        li
-          .team__item-prewiev
-            img(src="img/team/OurTeam-strat-1.png")
-        li
-          .team__item-prewiev
-            img(src="./img/team/our-team.png")
-        li
-          .team__item-prewiev
-            img(src="./img/team/OurTeam.jpg")
-      button.team__arrow.team__arrow--prev(type="button") prev
-      button.team__arrow.team__arrow--next(type="button") next
+  .team__wrapper-preview
+    ul.team__preview-list.js-team-preview
+      li
+        .team__item-prewiev
+          img(src="./img/team/our-team.png")
+      li
+        .team__item-prewiev
+          img(src="./img/team/OurTeam.jpg")
+      li
+        .team__item-prewiev
+          img(src="img/team/OurTeam-strat-1.png")
+      li
+        .team__item-prewiev
+          img(src="./img/team/our-team.png")
+      li
+        .team__item-prewiev
+          img(src="./img/team/OurTeam.jpg")
+    button.team__arrow.team__arrow--prev(type="button") prev
+    button.team__arrow.team__arrow--next(type="button") next
