--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
 		meta(name="apple-mobile-web-app-status-bar-style", content="#4C8CF5")
 		title MPS Development | Full stack development service
 		link(rel="shortcut icon", href="img/favicon.png")
-		link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7CSource+Sans+Pro:300,400,600,700", rel="preload")
+		link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7CSource+Sans+Pro:300,400,600,700", rel="preload" as="font")
 		link(href="css/style.min.css", rel="stylesheet")
 	body
 		include ../app/promo/_promo.pug
