Fixed bug team img

--- a/src/app/team/_team.pug
+++ b/src/app/team/_team.pug
@@ -7,35 +7,35 @@ section.team#team
     ul.team__main.js-team-main
       li
         .team__item-main
-          img(src="./img/team/our-team.png")
+          img(src="img/team/our-team.png")
       li
         .team__item-main
-          img(src="./img/team/OurTeam.jpg")
-      li
-      .team__item-main
-        img(src="img/team/OurTeam-strat-1.png")
+          img(src="img/team/OurTeam.jpg")
       li
         .team__item-main
-          img(src="./img/team/our-team.png")
+          img(src="img/team/OurTeam-strat-1.png")
       li
         .team__item-main
-          img(src="./img/team/OurTeam.jpg")
+          img(src="img/team/our-team.png")
+      li
+        .team__item-main
+          img(src="img/team/OurTeam.jpg")
   .team__wrapper-preview
     ul.team__preview-list.js-team-preview
       li
         .team__item-prewiev
-          img(src="./img/team/our-team.png")
+          img(src="img/team/our-team.png")
       li
         .team__item-prewiev
-          img(src="./img/team/OurTeam.jpg")
+          img(src="img/team/OurTeam.jpg")
       li
         .team__item-prewiev
           img(src="img/team/OurTeam-strat-1.png")
       li
         .team__item-prewiev
-          img(src="./img/team/our-team.png")
+          img(src="img/team/our-team.png")
       li
         .team__item-prewiev
-          img(src="./img/team/OurTeam.jpg")
+          img(src="img/team/OurTeam.jpg")
     button.team__arrow.team__arrow--prev(type="button") prev
     button.team__arrow.team__arrow--next(type="button") next
