--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -403,15 +403,14 @@
 		&::before {
 			content: '';
 			position: absolute;
-			background-color: transparent;
+			background-color: $pale-grey;
 			right: 10px;
 			left: 10px;
 			bottom: 10px;
 			height: 1px;
-			opacity: .9;
-			transform: scale(0);
-			transform-origin: 0;
-			transition: all .3s ease-in-out;
+			transform: scaleX(0);
+			transform-origin: right top;
+			transition: transform .3s ease-in-out;
 
 		}
 
@@ -425,8 +424,7 @@
 
 		&:hover {
 			&::before {
-				background-color: $pale-grey;
-				opacity: 1;
+				transform-origin: left top;
 				transform: scale(1);
 			}
 		}
@@ -443,7 +441,7 @@
 
 			&::before {
 				background-color: $primary;
-				opacity: 1;
+				transform-origin: left top;
 				transform: scale(1);
 			}
 
