edit img patch disabled fade slider

--- a/src/app/works/_works.pug
+++ b/src/app/works/_works.pug
@@ -14,55 +14,55 @@ article.works#portfolio
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/1.png',
+      'img/works/1.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/2.png',
+      'img/works/2.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/3.png',
+      'img/works/3.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/4.png',
+      'img/works/4.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/5.png',
+      'img/works/5.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/6.png',
+      'img/works/6.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/7.png',
+      'img/works/7.png',
       'Cloud-based push notification platform'
     )
     +worksItem(
       '#',
       'Cloud-based push notification platform',
       'lorem',
-      'img/8.png',
+      'img/works/8.png',
       'Cloud-based push notification platform'
     )
