--- a/src/app/partners/_partners.pug
+++ b/src/app/partners/_partners.pug
@@ -12,42 +12,42 @@ section.partners
     ul.partners__list.js-partners-slider
       +partner(
       '#',
-      './img/partner-solarwinds.svg',
+      './img/partners/partner-solarwinds.svg',
       '155',
       '33',
       'partner-solarwinds'
       )
       +partner(
       '#',
-      './img/partners-clutch.svg',
+      './img/partners/partners-clutch.svg',
       '155',
       '62',
       'partners-clutch'
       )
       +partner(
       '#',
-      './img/partners-sdt.png',
+      './img/partners/partners-sdt.png',
       '146',
       '36',
       'partners-sdt'
       )
       +partner(
       '#',
-      './img/partners-etsa.jpg',
+      './img/partners/partners-etsa.jpg',
       '160',
       '57',
       'partners-etsa'
       )
       +partner(
       '#',
-      './img/partners-skilled.png',
+      './img/partners/partners-skilled.png',
       '96',
       '80',
       'partners-skilled'
       )
       +partner(
       '#',
-      './img/partners-accelerance.png',
+      './img/partners/partners-accelerance.png',
       '155',
       '33',
       'partners-accelerance'
