--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -19,6 +19,10 @@
               a(class='menu__link js-scrollto', href="#team") Team
             li.menu__item
               a(class='menu__link js-scrollto', href="#contact") Contact
+            li.menu__item
+              a(class='menu__link', href="#", target="_blank") Blog
+            li.menu__item
+              a(class='menu__link', href="http://mpsdevelopment.com/", target="_blank") Software for aviation
   section.promo__text
     p.promo__subtitle Professional software engineering services
     h1.promo__title Welcome to
