--- a/src/app/technology/_technology.pug
+++ b/src/app/technology/_technology.pug
@@ -1,8 +1,7 @@
 section.technology
-	div.technology-wrap.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	.technology-wrap
+		.content--underlined
+			h2.technology__title.txt--bold Our technology stack
+			p.technology__txt Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit consequatur, libero possimus pariatur, ut magni sunt, quam quis illo enim ad eaque eveniet minus totam excepturi culpa. Doloremque, voluptatibus, nisi.
+	.technology__box
+		svg.box(id="svgC" width="100%" height="100%" viewBox="0 0 560 170" preserveAspectRatio="xMinYMid meet")
