--- a/src/app/contact/_contact.pug
+++ b/src/app/contact/_contact.pug
@@ -19,10 +19,10 @@ article.contact#contact
 			section.address__item
 				h3.address__title Call us
 				p.txt-contact
-					a.d-b.txt-contact(href='tel:+380953430467')
+					a.d-b.txt-contact.address__tel(href='tel:+380953430467')
 						span.txt--bold UA:
 						span &nbsp;+38 095 343 04 67
-					a.d-b.txt-contact(href='tel:+13233750718')
+					a.d-b.txt-contact.address__tel(href='tel:+13233750718')
 						span.txt--bold USA:
 						span &nbsp;+1 323 375 07 18
 
