--- a/src/app/technology/_technology.pug
+++ b/src/app/technology/_technology.pug
@@ -1,7 +1,10 @@
 section.technology
 	.technology-wrap
-		.content--underlined
+		.content--underlined.technology--underlined
 			h2.technology__title.txt--bold Our technology stack
 			p.technology__txt Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit consequatur, libero possimus pariatur, ut magni sunt, quam quis illo enim ad eaque eveniet minus totam excepturi culpa. Doloremque, voluptatibus, nisi.
 	.technology__box
 		svg.box(id="svgC" width="100%" height="100%" viewBox="0 0 560 170" preserveAspectRatio="xMinYMid meet")
+			//- defs
+			//- 	pattern(id="s01" width="100%" height="100%")
+			//- 		image(xlink:href="img/technology/02.svg", width="35", height="35")
