--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,4 +15,5 @@
 @import '../app/slogan/slogan';
 @import '../app/contact/contact';
 @import '../app/map/map';
+@import '../app/project/project';
 @import '../app/footer/footer';
