--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,7 +15,7 @@ html(lang="en")
 		link(rel="shortcut icon", href="img/favicon.png")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7CSource+Sans+Pro:300,400,600,700", rel="preload" as="font")
 		link(href="css/style.min.css", rel="stylesheet")
-	body
+	body.is-home
 		include ../app/promo/_promo.pug
 		main
 			include ../app/about/_about.pug
